# whisper-hotkey-daemon

./: .gitignore  00_install_nvidia_container_toolkit.sh  00_run_whisper_hotkey_daemon.sh  01_plan.md  01_run_whisper_hotkey_daemon.sh  01_run_whisper_hotkey_daemon_en.sh  02_progress.md  02_run_whisper_hotkey_daemon_fr.sh  03_decisions.md  03_run_whisper_hotkey_daemon_hu.sh  04_learnings.md  04_run_whisper_hotkey_daemon_auto.sh  260311_plan_autodetect_lang_impl.md  README  README.md  bootstrap.sh  install.sh  main.py  pixi.toml  pyproject.toml  run.sh  uninstall.sh  whisper_hotkey.py  whisper_hotkey_linux.py
.ruler/: 0000_ruler.md  1001_fast_ai_coding_style.md  1002_tdd_red_green.md  1003_source_control.md  1004_package_management.md  1100_document_naming_conventions.md  2001_fast_ai_coding_style.md  2004_package_management.md  4100_living_docs_convention.md  4101_archive_convention.md  AGENTS.md  ruler.toml
docs/: 260529__mac_bootstrap_handoff.md  mac_setup.md
scripts/: 00_run_whisper_hotkey_daemon.sh  01_run_whisper_hotkey_daemon_en.sh  02_run_whisper_hotkey_daemon_fr.sh  03_run_whisper_hotkey_daemon_hu.sh  101_install_whispercpp.sh  control_mac_app.sh  create_mac_app.sh  test_mac_setup.sh
scripts/lib/: backend_docker.sh  backend_mlx.sh  backend_whispercpp.sh
src/: backend_select.py  main.py  mlx_whisper_server.py  whisper_hotkey_mac_experimental.py  whisper_hotkey_win_experimental.py
tests/: test_backend_select.py  test_install_uninstall.sh  test_mlx_server.py  test_run_dispatch.sh  test_whispercpp_contract.py
